# SpatialMind

./: .gitignore  CMakeLists.txt  README.md  prompt.example.json  resources.qrc
promptProject/: prompt.example.json  prompt.json  system-example.txt  system.txt
src/: ConversationManager.cpp  ConversationManager.h  GISEngine.cpp  GISEngine.h  LLMClient.cpp  LLMClient.h  MainWindow.cpp  MainWindow.h  MapBridge.cpp  MapBridge.h  QueryHistory.cpp  QueryHistory.h  SQLCache.cpp  SQLCache.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
web/: map.html
